--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Esther</string>
+    <string name="goodmorning">my mum is the best</string>
+    <string name="morning">my mum is the best</string>
 </resources>
