content providers google maps to locate holders location

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="goodmorning">my mum is the best</string>
     <string name="morning">my mum is the best</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
